Disable AI/OpenAI features - rename to disabled_* files

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -21,7 +21,7 @@ de:
       smarter_assistent: "smarter Assistent"
       fuer_jedes: "für jedes"
       video_projekt: "Video-Projekt"
-    subline: "Spare Speicherplatz und Zeit: VoidFiles analysiert deine Adobe Premiere Pro-Projekte, erkennt genutzte, ungenutzte und fehlende Medien – alles auf einen Blick, KI-gestützt und sicher."
+    subline: "Spare Speicherplatz und Zeit: VoidFiles analysiert deine Adobe Premiere Pro-Projekte, erkennt genutzte, ungenutzte und fehlende Medien – schnell, präzise und intelligent."
     cta_start: "Jetzt starten"
     cta_how: "So funktioniert's"
     cta_note: "Keine Kreditkarte nötig – jederzeit kündbar"
@@ -42,7 +42,7 @@ de:
     step2_title: "XML-Datei hochladen"
     step2_text: "Wähle deine .xml-Datei aus oder ziehe sie ins Upload-Feld. Deine Daten bleiben geschützt."
     step3_title: "Automatische Analyse"
-    step3_text: "VoidFiles erkennt genutzte, ungenutzte und fehlende Medien – schnell, präzise und KI-gestützt."
+    step3_text: "VoidFiles erkennt genutzte, ungenutzte und fehlende Medien – intelligent und präzise."
     step4_title: "Ergebnis erhalten"
     step4_text: "Du bekommst eine übersichtliche Auswertung und kannst direkt Optimierungspotenzial erkennen."
     how_slogan_bold: "Schnell. Klar. Effizient."
@@ -57,36 +57,36 @@ de:
     supported_format: "Unterstütztes Format: .xml"
   footer:
     slogan: "Intelligente Analyse von Adobe Premiere Pro-Projekten"
-    tech: "Entwickelt mit Ruby on Rails, Tailwind CSS und GPT-4."
+    tech: "Entwickelt mit Ruby on Rails und Tailwind CSS."
   show:
     title: "Referenzierte Medien im Projekt"
-    intro: "Deine Medien wurden erfolgreich erkannt. Du kannst jetzt selbst testen, ob alles korrekt ist – oder die KI genutzte und ungenutzte Medien sortieren lassen."
+    intro: "Deine Medien wurden erfolgreich erkannt. Wähle die gewünschten Sequenzen aus, um die intelligente Analyse zu starten."
     hint_reload: "Sollten keine Medien angezeigt werden, lade die Seite bitte einmal neu. Die Analyse kann wenige Sekunden dauern."
     no_media: "Keine Medien im Projekt gefunden."
-    ki_start: "KI-Analyse starten"
+    start: "Analyse starten"
     missing_media: "Fehlende Medien"
     no_missing_media: "Keine fehlenden Medien erkannt."
-    ki_running: "KI-Analyse läuft..."
-    ki_running_hint: "Die Analyse wird im Hintergrund durchgeführt. Bitte warte einen Moment."
-    ki_failed: "Analyse fehlgeschlagen"
-    ki_failed_hint: "Die KI-Analyse konnte nicht abgeschlossen werden. Bitte überprüfe die Server-Logs für Details."
-    ki_progress_text: "Sequenzen analysiert"
-    ki_current_sequence: "Aktuelle Sequenz"
+    running: "Analyse läuft..."
+    running_hint: "Die Analyse wird im Hintergrund durchgeführt. Bitte warte einen Moment."
+    failed: "Analyse fehlgeschlagen"
+    failed_hint: "Die Analyse konnte nicht abgeschlossen werden. Bitte überprüfe die Server-Logs für Details."
+    progress_text: "Sequenzen analysiert"
+    current_sequence: "Aktuelle Sequenz"
     select_sequences: "Sequenzen auswählen"
     skipped_sequences_title: "Folgende Sequenzen konnten nach 3 Versuchen nicht analysiert werden und wurden übersprungen:"
     skipped_sequences_hint: "Bitte prüfe die XML oder versuche es ggf. mit einer anderen Export-Einstellung erneut."
   sequences_select:
     title: "Sequenzen auswählen"
-    intro: "Wähle die Sequenzen aus, die für dein finales Video relevant sind. Nur diese werden von der KI analysiert."
+    intro: "Wähle die Sequenzen aus, die für dein finales Video relevant sind. Unsere intelligente Analyse untersucht die Mediennutzung."
     no_sequences: "Keine Sequenzen gefunden."
     duration: "Dauer"
     unnamed: "Unbenannt"
-    submit: "KI-Analyse für ausgewählte Sequenzen starten"
+    submit: "Analyse für ausgewählte Sequenzen starten"
   faq:
     title: "Häufige Fragen (FAQ)"
     subtitle: "Alles, was du über VoidFiles wissen musst"
     what_is_title: "Was ist VoidFiles?"
-    what_is_text: "VoidFiles ist ein smarter Assistent zur Analyse von Adobe Premiere Pro-Projekten. Er erkennt genutzte, ungenutzte und fehlende Mediendateien in deinen .prproj-Projekten – schnell, sicher und KI-gestützt."
+    what_is_text: "VoidFiles ist ein smarter Assistent zur Analyse von Adobe Premiere Pro-Projekten. Er erkennt genutzte, ungenutzte und fehlende Mediendateien in deinen .prproj-Projekten – schnell und sicher."
     file_types_title: "Welche Dateitypen kann ich hochladen?"
     file_types_text: "Aktuell werden .xml-Dateien (exportierte Adobe Premiere Pro-Projekte) unterstützt. Du musst dein Projekt zuerst als XML exportieren."
     how_upload_title: "Wie funktioniert der Upload?"
@@ -115,7 +115,7 @@ de:
       period: "/Monat"
       badge: "Beliebt"
       feature1: "Unbegrenzte Analysen"
-      feature2: "Erweiterte KI-Analyse"
+      feature2: "Erweiterte Medienanalyse"
       feature3: "Prioritäts-Support"
       feature4: "API-Zugang"
       feature5: "Team-Funktionen"
@@ -153,7 +153,7 @@ de:
     how_step2_title: "XML-Datei hochladen"
     how_step2_text: "Lade die exportierte XML-Datei hoch. Deine Daten bleiben sicher und werden vertraulich behandelt."
     how_step3_title: "Automatische Analyse"
-    how_step3_text: "VoidFiles analysiert dein Projekt mit KI und erkennt genutzte, ungenutzte und fehlende Medien."
+    how_step3_text: "VoidFiles analysiert dein Projekt und erkennt genutzte, ungenutzte und fehlende Medien."
     how_step4_title: "Ergebnis erhalten"
     how_step4_text: "Du bekommst eine übersichtliche Auswertung und kannst direkt Optimierungspotenzial erkennen."
     benefits_title: "Deine Vorteile mit VoidFiles"
@@ -161,15 +161,15 @@ de:
     benefit1_text: "Finde ungenutzte Dateien und räume Projekte in Minuten statt Stunden auf."
     benefit2_title: "Fehler vermeiden"
     benefit2_text: "Erkenne fehlende Medien sofort und verhindere böse Überraschungen beim Export."
-    benefit3_title: "KI-gestützte Analyse"
-    benefit3_text: "Profitiere von intelligenter Medienklassifikation und präzisen Ergebnissen."
+    benefit3_title: "Intelligente Analyse"
+    benefit3_text: "Profitiere von intelligenter Medienanalyse und präzisen Ergebnissen."
     benefit4_title: "Sicher & datenschutzkonform"
     benefit4_text: "Deine Daten werden vertraulich behandelt und nicht an Dritte weitergegeben."
     nobrainer_title: "Warum ein No-Brainer?"
     nobrainer_text: "VoidFiles automatisiert eine der lästigsten Aufgaben im Videoschnitt. Statt stundenlangem Suchen, Sortieren und Kontrollieren erledigst du alles mit wenigen Klicks – sicher, schnell und zuverlässig. Spare Zeit, Nerven und bares Geld!"
     future_title: "Zukünftige Features (Roadmap)"
     future1: "Direkter .prproj-Upload (ohne XML-Export)"
-    future2: "Noch intelligentere KI-Auswertung und Medienvorschläge"
+    future2: "Noch intelligentere Auswertung und Medienvorschläge"
     future3: "Integration mit Cloud-Speichern (Dropbox, Google Drive, etc.)"
     future4: "Team- und Kollaborationsfunktionen"
     future5: "Erweiterte Sicherheits- und Datenschutzoptionen"
