--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -21,7 +21,7 @@ es:
       smarter_assistent: "asistente inteligente"
       fuer_jedes: "para cada"
       video_projekt: "proyecto de vídeo"
-    subline: "Ahorra espacio y tiempo: VoidFiles analiza tus proyectos de Adobe Premiere Pro, detecta medios utilizados, no utilizados y faltantes, todo de un vistazo, con IA y de forma segura."
+    subline: "Ahorra espacio y tiempo: VoidFiles analiza tus proyectos de Adobe Premiere Pro, detecta medios utilizados, no utilizados y faltantes, todo de un vistazo, inteligente y seguro."
     cta_start: "Comenzar ahora"
     cta_how: "Cómo funciona"
     cta_note: "No se requiere tarjeta de crédito – puedes cancelar en cualquier momento"
@@ -42,7 +42,7 @@ es:
     step2_title: "Subir archivo XML"
     step2_text: "Selecciona tu archivo .xml o arrástralo al campo de carga. Tus datos permanecen protegidos."
     step3_title: "Análisis automático"
-    step3_text: "VoidFiles detecta medios utilizados, no utilizados y faltantes – rápido, preciso y con IA."
+    step3_text: "VoidFiles detecta medios utilizados, no utilizados y faltantes – inteligente y preciso."
     step4_title: "Recibir resultados"
     step4_text: "Recibes una evaluación clara y puedes reconocer inmediatamente el potencial de optimización."
     how_slogan_bold: "Rápido. Claro. Eficiente."
@@ -57,19 +57,22 @@ es:
     supported_format: "Formato soportado: .xml"
   show:
     title: "Medios referenciados en el proyecto"
-    intro: "Tus medios han sido detectados correctamente. Ahora puedes comprobar si todo es correcto – o dejar que la IA clasifique los medios utilizados y no utilizados."
+    intro: "Tus medios han sido detectados correctamente. Selecciona las secuencias para iniciar el análisis inteligente."
     hint_reload: "Si no se muestran medios, por favor recarga la página. El análisis puede tardar unos segundos."
     no_media: "No se encontraron medios en el proyecto."
-    ki_start: "Iniciar análisis con IA"
-    ki_running: "Análisis con IA en ejecución..."
-    ki_running_hint: "El análisis se está ejecutando en segundo plano. Por favor espera un momento."
-    ki_failed: "Análisis fallido"
-    ki_failed_hint: "El análisis con IA no pudo completarse. Por favor consulta los registros del servidor para obtener detalles."
+    start: "Iniciar análisis"
+    running: "Análisis en ejecución..."
+    running_hint: "El análisis se está ejecutando en segundo plano. Por favor espera un momento."
+    failed: "Análisis fallido"
+    failed_hint: "El análisis no pudo completarse. Por favor consulta los registros del servidor para obtener detalles."
+  sequences_select:
+    title: "Seleccionar secuencias"
+    intro: "Selecciona las secuencias relevantes para tu video final. Nuestro análisis inteligente examina el uso de medios."
   faq:
     title: "Preguntas Frecuentes (FAQ)"
     subtitle: "Todo lo que necesitas saber sobre VoidFiles"
     what_is_title: "¿Qué es VoidFiles?"
-    what_is_text: "VoidFiles es un asistente inteligente para analizar proyectos de Adobe Premiere Pro. Detecta archivos multimedia utilizados, no utilizados y faltantes en tus proyectos .prproj – rápido, seguro y con IA."
+    what_is_text: "VoidFiles es un asistente inteligente para analizar proyectos de Adobe Premiere Pro. Detecta archivos multimedia utilizados, no utilizados y faltantes en tus proyectos .prproj – rápido y seguro."
     file_types_title: "¿Qué tipos de archivos puedo subir?"
     file_types_text: "Actualmente se soportan archivos .xml (proyectos exportados de Adobe Premiere Pro). Necesitas exportar tu proyecto como XML primero."
     how_upload_title: "¿Cómo funciona la subida?"
@@ -98,7 +101,7 @@ es:
       period: "/mes"
       badge: "Popular"
       feature1: "Análisis ilimitados"
-      feature2: "Análisis IA avanzado"
+      feature2: "Análisis avanzado de medios"
       feature3: "Soporte prioritario"
       feature4: "Acceso API"
       feature5: "Funciones de equipo"
@@ -136,7 +139,7 @@ es:
     how_step2_title: "Subir archivo XML"
     how_step2_text: "Sube el archivo XML exportado. Tus datos permanecen seguros y se tratan de forma confidencial."
     how_step3_title: "Análisis automático"
-    how_step3_text: "VoidFiles analiza tu proyecto con IA y detecta medios utilizados, no utilizados y faltantes."
+    how_step3_text: "VoidFiles analiza tu proyecto y detecta medios utilizados, no utilizados y faltantes."
     how_step4_title: "Recibir resultados"
     how_step4_text: "Recibes una evaluación clara y puedes reconocer inmediatamente el potencial de optimización."
     benefits_title: "Tus ventajas con VoidFiles"
@@ -144,22 +147,22 @@ es:
     benefit1_text: "Encuentra archivos no utilizados y limpia proyectos en minutos en lugar de horas."
     benefit2_title: "Evita errores"
     benefit2_text: "Detecta medios faltantes al instante y evita sorpresas desagradables al exportar."
-    benefit3_title: "Análisis impulsado por IA"
-    benefit3_text: "Benefíciate de la clasificación inteligente de medios y resultados precisos."
+    benefit3_title: "Análisis inteligente"
+    benefit3_text: "Benefíciate del análisis inteligente de medios y resultados precisos."
     benefit4_title: "Seguro y conforme a la privacidad"
     benefit4_text: "Tus datos se tratan de forma confidencial y no se comparten con terceros."
     nobrainer_title: "¿Por qué es un no-brainer?"
     nobrainer_text: "VoidFiles automatiza una de las tareas más tediosas en la edición de vídeo. En lugar de horas buscando, ordenando y comprobando, lo haces todo con unos pocos clics – seguro, rápido y fiable. ¡Ahorra tiempo, nervios y dinero!"
     future_title: "Próximas funciones (Roadmap)"
     future1: "Subida directa de .prproj (sin exportar XML)"
-    future2: "Análisis IA aún más inteligente y sugerencias de medios"
+    future2: "Análisis aún más inteligente y sugerencias de medios"
     future3: "Integración con almacenamiento en la nube (Dropbox, Google Drive, etc.)"
     future4: "Funciones de equipo y colaboración"
     future5: "Opciones avanzadas de seguridad y privacidad"
     future_note: "¡Como usuario temprano puedes influir activamente en el desarrollo y beneficiarte de ventajas exclusivas!"
   footer:
     slogan: "Análisis inteligente de proyectos de Adobe Premiere Pro"
-    tech: "Desarrollado con Ruby on Rails, Tailwind CSS y GPT-4."
+    tech: "Desarrollado con Ruby on Rails y Tailwind CSS."
   time:
     formats:
       short: "%d/%m/%Y, %H:%M"
