--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -21,7 +21,7 @@ fr:
       smarter_assistent: "assistant intelligent"
       fuer_jedes: "pour chaque"
       video_projekt: "projet vidéo"
-    subline: "Gagnez de l'espace et du temps : VoidFiles analyse vos projets Adobe Premiere Pro, détecte les médias utilisés, inutilisés et manquants – tout en un coup d'œil, avec IA et en toute sécurité."
+    subline: "Gagnez de l'espace et du temps : VoidFiles analyse vos projets Adobe Premiere Pro, détecte les médias utilisés, inutilisés et manquants – tout en un coup d'œil, intelligemment et en toute sécurité."
     cta_start: "Commencer maintenant"
     cta_how: "Comment ça marche"
     cta_note: "Aucune carte de crédit requise – résiliable à tout moment"
@@ -42,7 +42,7 @@ fr:
     step2_title: "Télécharger le fichier XML"
     step2_text: "Sélectionnez votre fichier .xml ou faites-le glisser dans le champ de téléchargement. Vos données restent protégées."
     step3_title: "Analyse automatique"
-    step3_text: "VoidFiles détecte les médias utilisés, inutilisés et manquants – rapidement, précisément et avec IA."
+    step3_text: "VoidFiles détecte les médias utilisés, inutilisés et manquants – intelligemment et précisément."
     step4_title: "Recevoir les résultats"
     step4_text: "Vous recevez une évaluation claire et pouvez immédiatement reconnaître le potentiel d'optimisation."
     how_slogan_bold: "Rapide. Clair. Efficace."
@@ -57,19 +57,19 @@ fr:
     supported_format: "Format pris en charge : .xml"
   show:
     title: "Médias référencés dans le projet"
-    intro: "Vos médias ont été détectés avec succès. Vous pouvez maintenant vérifier vous-même si tout est correct – ou laisser l'IA trier les médias utilisés et inutilisés."
+    intro: "Vos médias ont été détectés avec succès. Sélectionnez les séquences pour démarrer l'analyse intelligente."
     hint_reload: "Si aucun média n'est affiché, veuillez recharger la page. L'analyse peut prendre quelques secondes."
     no_media: "Aucun média trouvé dans le projet."
-    ki_start: "Démarrer l'analyse IA"
-    ki_running: "Analyse IA en cours..."
-    ki_running_hint: "L'analyse s'exécute en arrière-plan. Veuillez patienter un moment."
-    ki_failed: "Analyse échouée"
-    ki_failed_hint: "L'analyse IA n'a pas pu être terminée. Veuillez consulter les journaux du serveur pour plus de détails."
+    start: "Démarrer l'analyse"
+    running: "Analyse en cours..."
+    running_hint: "L'analyse s'exécute en arrière-plan. Veuillez patienter un moment."
+    failed: "Analyse échouée"
+    failed_hint: "L'analyse n'a pas pu être terminée. Veuillez consulter les journaux du serveur pour plus de détails."
   faq:
     title: "Questions Fréquemment Posées (FAQ)"
     subtitle: "Tout ce que vous devez savoir sur VoidFiles"
     what_is_title: "Qu'est-ce que VoidFiles ?"
-    what_is_text: "VoidFiles est un assistant intelligent pour analyser les projets Adobe Premiere Pro. Il détecte les fichiers multimédias utilisés, inutilisés et manquants dans vos projets .prproj – rapidement, en toute sécurité et avec IA."
+    what_is_text: "VoidFiles est un assistant intelligent pour analyser les projets Adobe Premiere Pro. Il détecte les fichiers multimédias utilisés, inutilisés et manquants dans vos projets .prproj – rapidement et en toute sécurité."
     file_types_title: "Quels types de fichiers puis-je télécharger ?"
     file_types_text: "Actuellement, les fichiers .xml (projets Adobe Premiere Pro exportés) sont pris en charge. Vous devez d'abord exporter votre projet en XML."
     how_upload_title: "Comment fonctionne le téléchargement ?"
@@ -98,7 +98,7 @@ fr:
       period: "/mois"
       badge: "Populaire"
       feature1: "Analyses illimitées"
-      feature2: "Analyse IA avancée"
+      feature2: "Analyse avancée des médias"
       feature3: "Support prioritaire"
       feature4: "Accès API"
       feature5: "Fonctionnalités d'équipe"
@@ -127,7 +127,7 @@ fr:
       answer: "Oui, tous les prix affichés incluent la TVA légale."
   footer:
     slogan: "Analyse intelligente des projets Adobe Premiere Pro"
-    tech: "Développé avec Ruby on Rails, Tailwind CSS et GPT-4."
+    tech: "Développé avec Ruby on Rails et Tailwind CSS."
   features:
     title: "Qu'est-ce qui rend VoidFiles unique ?"
     subtitle: "La solution intelligente pour la gestion des médias dans Premiere Pro – aujourd'hui et demain."
@@ -139,7 +139,7 @@ fr:
     how_step2_title: "Télécharger le fichier XML"
     how_step2_text: "Téléchargez le fichier XML exporté. Vos données restent en sécurité et sont traitées de manière confidentielle."
     how_step3_title: "Analyse automatique"
-    how_step3_text: "VoidFiles analyse votre projet avec l'IA et détecte les médias utilisés, inutilisés et manquants."
+    how_step3_text: "VoidFiles analyse votre projet et détecte les médias utilisés, inutilisés et manquants."
     how_step4_title: "Recevoir les résultats"
     how_step4_text: "Vous recevez une évaluation claire et pouvez immédiatement repérer le potentiel d'optimisation."
     benefits_title: "Vos avantages avec VoidFiles"
@@ -147,15 +147,15 @@ fr:
     benefit1_text: "Trouvez les fichiers inutilisés et nettoyez vos projets en quelques minutes au lieu d'heures."
     benefit2_title: "Évitez les erreurs"
     benefit2_text: "Détectez immédiatement les médias manquants et évitez les mauvaises surprises à l'export."
-    benefit3_title: "Analyse assistée par IA"
-    benefit3_text: "Bénéficiez d'une classification intelligente des médias et de résultats précis."
+    benefit3_title: "Analyse intelligente"
+    benefit3_text: "Bénéficiez d'une analyse intelligente des médias et de résultats précis."
     benefit4_title: "Sécurisé et conforme à la confidentialité"
     benefit4_text: "Vos données sont traitées de manière confidentielle et ne sont pas partagées avec des tiers."
     nobrainer_title: "Pourquoi est-ce une évidence ?"
     nobrainer_text: "VoidFiles automatise l'une des tâches les plus fastidieuses du montage vidéo. Au lieu de passer des heures à chercher, trier et vérifier, tout se fait en quelques clics – sûr, rapide et fiable. Gagnez du temps, des nerfs et de l'argent !"
     future_title: "Fonctionnalités à venir (Roadmap)"
     future1: "Téléversement direct de .prproj (sans export XML)"
-    future2: "Analyse IA encore plus intelligente et suggestions de médias"
+    future2: "Analyse encore plus intelligente et suggestions de médias"
     future3: "Intégration avec le stockage cloud (Dropbox, Google Drive, etc.)"
     future4: "Fonctionnalités d'équipe et de collaboration"
     future5: "Options de sécurité et de confidentialité avancées"
