--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,7 +21,7 @@ en:
       smarter_assistent: "smarter assistant"
       fuer_jedes: "for every"
       video_projekt: "video project"
-    subline: "Save storage space and time: VoidFiles analyzes your Adobe Premiere Pro projects, identifies used, unused, and missing media - all at a glance, AI-powered and secure."
+    subline: "Save storage space and time: VoidFiles analyzes your Adobe Premiere Pro projects, identifies used, unused, and missing media - all at a glance, intelligent and secure."
     cta_start: "Get started now"
     cta_how: "How it works"
     cta_note: "No credit card required - cancel anytime"
@@ -42,7 +42,7 @@ en:
     step2_title: "Upload XML file"
     step2_text: "Select your .xml file or drag it into the upload field. Your data remains protected."
     step3_title: "Automatic analysis"
-    step3_text: "VoidFiles recognizes used, unused, and missing media - quickly, precisely, and AI-powered."
+    step3_text: "VoidFiles recognizes used, unused, and missing media - intelligently and precisely."
     step4_title: "Get results"
     step4_text: "You receive a clear evaluation and can directly identify optimization potential."
     how_slogan_bold: "Fast. Clear. Efficient."
@@ -57,36 +57,36 @@ en:
     supported_format: "Supported format: .xml"
   footer:
     slogan: "Intelligent analysis of Adobe Premiere Pro projects"
-    tech: "Built with Ruby on Rails, Tailwind CSS, and GPT-4."
+    tech: "Built with Ruby on Rails and Tailwind CSS."
   show:
     title: "Referenced media in the project"
-    intro: "Your media has been successfully detected. You can now test it yourself whether everything is correct - or let the AI sort used and unused media."
+    intro: "Your media has been successfully detected. Select the sequences you want to start the intelligent analysis for."
     hint_reload: "If no media is displayed, please reload the page. The analysis may take a few seconds."
     no_media: "No media found in the project."
-    ki_start: "Start AI analysis"
+    start: "Start analysis"
     missing_media: "Missing media"
     no_missing_media: "No missing media detected."
-    ki_running: "AI analysis running..."
-    ki_running_hint: "The analysis is running in the background. Please wait a moment."
-    ki_failed: "Analysis failed"
-    ki_failed_hint: "The AI analysis could not be completed. Please check the server logs for details."
-    ki_progress_text: "Sequences analyzed"
-    ki_current_sequence: "Current sequence"
+    running: "Analysis running..."
+    running_hint: "The analysis is running in the background. Please wait a moment."
+    failed: "Analysis failed"
+    failed_hint: "The analysis could not be completed. Please check the server logs for details."
+    progress_text: "Sequences analyzed"
+    current_sequence: "Current sequence"
     select_sequences: "Select sequences"
     skipped_sequences_title: "The following sequences could not be analyzed after 3 attempts and were skipped:"
     skipped_sequences_hint: "Please check the XML or try again with different export settings."
   sequences_select:
     title: "Select sequences"
-    intro: "Select the sequences that are relevant for your final video. Only these will be analyzed by the AI."
+    intro: "Select the sequences that are relevant for your final video. Our intelligent analysis examines media usage."
     no_sequences: "No sequences found."
     duration: "Duration"
     unnamed: "Unnamed"
-    submit: "Start AI analysis for selected sequences"
+    submit: "Start analysis for selected sequences"
   faq:
     title: "Frequently Asked Questions (FAQ)"
     subtitle: "Everything you need to know about VoidFiles"
     what_is_title: "What is VoidFiles?"
-    what_is_text: "VoidFiles is a smart assistant for analyzing Adobe Premiere Pro projects. It detects used, unused, and missing media files in your .xml projects - quickly, securely, and AI-powered."
+    what_is_text: "VoidFiles is a smart assistant for analyzing Adobe Premiere Pro projects. It detects used, unused, and missing media files in your .xml projects - quickly and securely."
     file_types_title: "What file types can I upload?"
     file_types_text: "Currently, .xml files (exported Adobe Premiere Pro projects) are supported. You must first export your project as XML."
     how_upload_title: "How does the upload work?"
@@ -115,7 +115,7 @@ en:
       period: "/month"
       badge: "Popular"
       feature1: "Unlimited analyses"
-      feature2: "Advanced AI analysis"
+      feature2: "Advanced media analysis"
       feature3: "Priority support"
       feature4: "API access"
       feature5: "Team features"
@@ -153,7 +153,7 @@ en:
     how_step2_title: "Upload XML file"
     how_step2_text: "Upload the exported XML file. Your data remains safe and is treated confidentially."
     how_step3_title: "Automatic analysis"
-    how_step3_text: "VoidFiles analyzes your project with AI and detects used, unused, and missing media."
+    how_step3_text: "VoidFiles analyzes your project and detects used, unused, and missing media."
     how_step4_title: "Get results"
     how_step4_text: "You receive a clear evaluation and can directly identify optimization potential."
     benefits_title: "Your advantages with VoidFiles"
@@ -161,15 +161,15 @@ en:
     benefit1_text: "Find unused files and clean up projects in minutes instead of hours."
     benefit2_title: "Avoid errors"
     benefit2_text: "Detect missing media immediately and prevent unpleasant surprises during export."
-    benefit3_title: "AI-powered analysis"
-    benefit3_text: "Benefit from intelligent media classification and precise results."
+    benefit3_title: "Intelligent analysis"
+    benefit3_text: "Benefit from intelligent media analysis and precise results."
     benefit4_title: "Secure & compliant"
     benefit4_text: "Your data is treated confidentially and not shared with third parties."
     nobrainer_title: "Why a no-brainer?"
     nobrainer_text: "VoidFiles automates one of the most tedious tasks in video editing. Instead of hours of searching, sorting, and checking, you do everything with a few clicks - safely, quickly, and reliably. Save time, nerves, and real money!"
     future_title: "Future features (Roadmap)"
     future1: "Direct .prproj upload (without XML export)"
-    future2: "Even smarter AI analysis and media suggestions"
+    future2: "Even smarter analysis and media suggestions"
     future3: "Integration with cloud storage (Dropbox, Google Drive, etc.)"
     future4: "Team and collaboration features"
     future5: "Enhanced security and privacy options"
