Update: Add admin panel, sessions controller, and UI improvements

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -180,7 +180,8 @@ de:
       long: "%d. %B %Y, %H:%M Uhr"
   date:
     formats:
-      short: "%d.%m.%Y" 
+      short: "%d.%m.%Y"
+      long: "%d. %B %Y"
   header:
     login: "Anmelden"
     cta: "Kostenlos starten" 
@@ -197,4 +198,60 @@ de:
   errors:
     messages:
       taken: "ist bereits vergeben. Bitte verwende eine andere E-Mail-Adresse."
-      blank: "darf nicht leer sein." 
+      blank: "darf nicht leer sein."
+  admin:
+    title: "Admin Dashboard"
+    total_users: "Registrierte Benutzer"
+    total_projects: "Gesamte Projekte"
+    admin_users: "Admin Benutzer"
+    user: "Benutzer"
+    registered: "Registriert am"
+    projects: "Projekte"
+    status: "Status"
+    admin: "Admin"
+    unknown_name: "Unbekannt"
+    actions: "Aktionen"
+    delete: "Löschen"
+    confirm_delete: "Möchtest du wirklich den Benutzer '%{name}' löschen? Diese Aktion kann nicht rückgängig gemacht werden."
+    user_deleted: "Benutzer erfolgreich gelöscht."
+    cannot_delete_self: "Du kannst dich nicht selbst löschen."
+    delete_failed: "Benutzer konnte nicht gelöscht werden."
+  prproj_uploads:
+    uploaded: "Hochgeladen"
+    sequences: "Sequenzen"
+    results: "Ergebnisse"
+    analyze_project: "Analysiere dein Premiere Pro Projekt"
+    media: "Medien"
+    audio_files: "Audio-Dateien"
+    select_sequences: "Sequenzen auswählen"
+    analysis_results: "Analyseergebnisse"
+    total: "Gesamt"
+    used: "Verwendet"
+    deletable: "Löschbar"
+    unused_media: "nicht verwendete Medien"
+    storage_percentage: "des Speichers"
+    all_media_used: "Alle Medien werden verwendet"
+    no_unnecessary_files: "Keine unnötigen Dateien gefunden"
+    new_analysis: "🔄 Neue Analyse"
+    another_project: "➕ Weiteres Projekt"
+    select_sequences_title: "Sequenzen auswählen"
+    select_sequences_intro: "Wähle die Sequenzen aus, die analysiert werden sollen"
+    sequences_found: "Sequenzen gefunden"
+    selected_count: "ausgewählt"
+    select_all: "Alle"
+    deselect_all: "Keine"
+    start_analysis: "Analyse starten"
+    sequences_selected: "Sequenz ausgewählt"
+    sequences_selected_plural: "Sequenzen ausgewählt"
+    please_select: "Bitte wähle mindestens eine Sequenz aus."
+    analysis_starting: "Analyse wird gestartet..."
+    unnamed: "Unbenannt"
+  profile:
+    title: "Dein Profil"
+    welcome: "Willkommen, %{name}!"
+    analyses_placeholder: "Du hast noch keine Projekte hochgeladen."
+    logout: "Abmelden"
+  dashboard:
+    welcome_registered: "Willkommen! Du hast dich erfolgreich registriert."
+    ready_first_analysis: "Bereit für deine erste Analyse?"
+    upload_get_insights: "Lade dein Premiere Pro Projekt hoch und erhalte detaillierte Einblicke" 
