--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -198,3 +198,42 @@ en:
     messages:
       taken: "is already taken. Please use a different email address."
       blank: "cannot be blank."
+  prproj_uploads:
+    uploaded: "Uploaded"
+    sequences: "Sequences"
+    results: "Results"
+    analyze_project: "Analyze your Premiere Pro project"
+    media: "Media"
+    audio_files: "Audio files"
+    select_sequences: "Select sequences"
+    analysis_results: "Analysis results"
+    total: "Total"
+    used: "Used"
+    deletable: "Deletable"
+    unused_media: "unused media"
+    storage_percentage: "of storage"
+    all_media_used: "All media is being used"
+    no_unnecessary_files: "No unnecessary files found"
+    new_analysis: "🔄 New analysis"
+    another_project: "➕ Another project"
+    select_sequences_title: "Select sequences"
+    select_sequences_intro: "Select the sequences to be analyzed"
+    sequences_found: "sequences found"
+    selected_count: "selected"
+    select_all: "All"
+    deselect_all: "None"
+    start_analysis: "Start analysis"
+    sequences_selected: "sequence selected"
+    sequences_selected_plural: "sequences selected"
+    please_select: "Please select at least one sequence."
+    analysis_starting: "Analysis is starting..."
+    unnamed: "Unnamed"
+  profile:
+    title: "Your Profile"
+    welcome: "Welcome, %{name}!"
+    analyses_placeholder: "You haven't uploaded any projects yet."
+    logout: "Log Out"
+  dashboard:
+    welcome_registered: "Welcome! You have successfully registered."
+    ready_first_analysis: "Ready for your first analysis?"
+    upload_get_insights: "Upload your Premiere Pro project and get detailed insights"
