--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -182,4 +182,47 @@ es:
     welcome: "Bienvenido de nuevo"
     subtitle: "Sube tu proyecto de Premiere Pro para analizarlo"
     recent_uploads: "Tus últimas subida"
-    view: "Ver" 
+    view: "Ver"
+  errors:
+    messages:
+      taken: "ya está en uso. Por favor utiliza una dirección de correo electrónico diferente."
+      blank: "no puede estar vacío."
+  prproj_uploads:
+    uploaded: "Subido"
+    sequences: "Secuencias"
+    results: "Resultados"
+    analyze_project: "Analiza tu proyecto de Premiere Pro"
+    media: "Medios"
+    audio_files: "Archivos de audio"
+    select_sequences: "Seleccionar secuencias"
+    analysis_results: "Resultados del análisis"
+    total: "Total"
+    used: "Utilizado"
+    deletable: "Eliminable"
+    unused_media: "medios no utilizados"
+    storage_percentage: "de almacenamiento"
+    all_media_used: "Todos los medios están siendo utilizados"
+    no_unnecessary_files: "No se encontraron archivos innecesarios"
+    new_analysis: "🔄 Nuevo análisis"
+    another_project: "➕ Otro proyecto"
+    select_sequences_title: "Seleccionar secuencias"
+    select_sequences_intro: "Selecciona las secuencias a analizar"
+    sequences_found: "secuencias encontradas"
+    selected_count: "seleccionado"
+    select_all: "Todas"
+    deselect_all: "Ninguna"
+    start_analysis: "Iniciar análisis"
+    sequences_selected: "secuencia seleccionada"
+    sequences_selected_plural: "secuencias seleccionadas"
+    please_select: "Por favor selecciona al menos una secuencia."
+    analysis_starting: "El análisis está comenzando..."
+    unnamed: "Sin nombre"
+  profile:
+    title: "Tu Perfil"
+    welcome: "¡Bienvenido, %{name}!"
+    analyses_placeholder: "Aún no has subido ningún proyecto."
+    logout: "Cerrar Sesión"
+  dashboard:
+    welcome_registered: "¡Bienvenido! Te has registrado correctamente."
+    ready_first_analysis: "¿Listo para tu primer análisis?"
+    upload_get_insights: "Sube tu proyecto de Premiere Pro y obtén información detallada" 
