--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -182,4 +182,43 @@ profile:
     view: "Voir"
   messages:
     taken: "est déjà utilisé. Veuillez utiliser une autre adresse e-mail."
-    blank: "ne peut pas être vide." 
+    blank: "ne peut pas être vide."
+  prproj_uploads:
+    uploaded: "Téléversé"
+    sequences: "Séquences"
+    results: "Résultats"
+    analyze_project: "Analysez votre projet Premiere Pro"
+    media: "Médias"
+    audio_files: "Fichiers audio"
+    select_sequences: "Sélectionner les séquences"
+    analysis_results: "Résultats de l'analyse"
+    total: "Total"
+    used: "Utilisé"
+    deletable: "Supprimable"
+    unused_media: "médias non utilisés"
+    storage_percentage: "de stockage"
+    all_media_used: "Tous les médias sont utilisés"
+    no_unnecessary_files: "Aucun fichier inutile trouvé"
+    new_analysis: "🔄 Nouvelle analyse"
+    another_project: "➕ Un autre projet"
+    select_sequences_title: "Sélectionner les séquences"
+    select_sequences_intro: "Sélectionnez les séquences à analyser"
+    sequences_found: "séquences trouvées"
+    selected_count: "sélectionné"
+    select_all: "Toutes"
+    deselect_all: "Aucune"
+    start_analysis: "Démarrer l'analyse"
+    sequences_selected: "séquence sélectionnée"
+    sequences_selected_plural: "séquences sélectionnées"
+    please_select: "Veuillez sélectionner au moins une séquence."
+    analysis_starting: "L'analyse est en cours de démarrage..."
+    unnamed: "Sans nom"
+  profile:
+    title: "Votre Profil"
+    welcome: "Bienvenue, %{name}!"
+    analyses_placeholder: "Vous n'avez pas encore téléversé de projets."
+    logout: "Déconnexion"
+  dashboard:
+    welcome_registered: "Bienvenue ! Vous vous êtes enregistré avec succès."
+    ready_first_analysis: "Prêt pour votre première analyse ?"
+    upload_get_insights: "Téléversez votre projet Premiere Pro et obtenir des informations détaillées" 
