Optimize header for mobile view: add hamburger menu with collapsible mobile navigation

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -58,6 +58,27 @@ de:
   footer:
     slogan: "Intelligente Analyse von Adobe Premiere Pro-Projekten"
     tech: "Entwickelt mit Ruby on Rails und Tailwind CSS."
+    imprint: "Impressum"
+  imprint:
+    title: "Impressum"
+    company_info: "Angaben gemäß § 5 TMG"
+    company_name: "VoidFiles"
+    address: "Musterstraße 123"
+    city: "12345 Musterstadt"
+    contact: "Kontakt"
+    email_label: "E-Mail"
+    email: "info@voidfiles.example.com"
+    management: "Geschäftsführung"
+    ceo: "Max Mustermann"
+    register_info: "Registereintrag"
+    register_court: "Amtsgericht Musterstadt"
+    register_number: "HRB 12345"
+    vat_info: "Umsatzsteuer-ID"
+    vat_id: "DE 123456789"
+    liability: "Haftungsausschluss"
+    liability_text: "Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen."
+    copyright: "Urheberrecht"
+    copyright_text: "Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen."
   show:
     title: "Referenzierte Medien im Projekt"
     intro: "Deine Medien wurden erfolgreich erkannt. Wähle die gewünschten Sequenzen aus, um die intelligente Analyse zu starten."
