--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -128,6 +128,27 @@ fr:
   footer:
     slogan: "Analyse intelligente des projets Adobe Premiere Pro"
     tech: "Développé avec Ruby on Rails et Tailwind CSS."
+    imprint: "Mentions légales"
+  imprint:
+    title: "Mentions légales"
+    company_info: "Informations conformément à l'article 55-7 du Code des postes et des communications électroniques"
+    company_name: "VoidFiles"
+    address: "123 Rue Principale"
+    city: "12345 Ville Exemple"
+    contact: "Contact"
+    email_label: "E-mail"
+    email: "info@voidfiles.example.com"
+    management: "Direction"
+    ceo: "Jean Dupont"
+    register_info: "Immatriculation"
+    register_court: "Registre du Commerce de Ville Exemple"
+    register_number: "SIREN 123 456 789"
+    vat_info: "N° de TVA intracommunautaire"
+    vat_id: "FR 12 123456789"
+    liability: "Clause de non-responsabilité"
+    liability_text: "Le contenu de nos pages a été élaboré avec le plus grand soin. Nous ne pouvons toutefois pas garantir l'exactitude, l'exhaustivité ou l'actualité du contenu. En tant que prestataire de services, nous sommes responsables de nos propres contenus sur ces pages conformément aux lois générales selon l'article 7, paragraphe 1, de la LCEN. Conformément aux articles 8 à 10 de la LCEN, nous ne sommes pas tenus en tant que prestataire de services de surveiller les informations transmises ou stockées de tiers ni d'enquêter sur les circonstances indiquant une activité illégale. Les obligations de suppression ou de blocage de l'utilisation d'informations conformément aux lois générales demeurent inchangées. Toutefois, la responsabilité à cet égard n'est possible qu'à partir du moment où nous avons connaissance d'une violation juridique spécifique. Dès que nous avons connaissance de telles violations légales, nous supprimons ce contenu immédiatement."
+    copyright: "Droits d'auteur"
+    copyright_text: "Les contenus et œuvres créés par les exploitants du site sur ces pages sont soumis au droit français de la propriété intellectuelle. La reproduction, le traitement, la diffusion et toute forme d'exploitation de ces contenus en dehors du cadre du droit d'auteur nécessitent le consentement écrit préalable de l'auteur ou du créateur concerné. Les téléchargements et copies de ce site ne sont autorisés que pour un usage privé et non commercial. Dans la mesure où le contenu de ce site n'a pas été créé par l'exploitant, les droits de propriété intellectuelle des tiers sont respectés. En particulier, les contenus de tiers sont identifiés comme tels. Si vous deviez néanmoins prendre connaissance d'une violation du droit d'auteur, nous vous prions de nous en informer immédiatement. Dès que nous avons connaissance de violations légales, nous supprimons ces contenus immédiatement."
   features:
     title: "Qu'est-ce qui rend VoidFiles unique ?"
     subtitle: "La solution intelligente pour la gestion des médias dans Premiere Pro – aujourd'hui et demain."
