--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,6 +58,27 @@ en:
   footer:
     slogan: "Intelligent analysis of Adobe Premiere Pro projects"
     tech: "Built with Ruby on Rails and Tailwind CSS."
+    imprint: "Imprint"
+  imprint:
+    title: "Imprint"
+    company_info: "Information according to § 5 TMG (German Telemedia Act)"
+    company_name: "VoidFiles"
+    address: "123 Main Street"
+    city: "12345 Sample City"
+    contact: "Contact"
+    email_label: "Email"
+    email: "info@voidfiles.example.com"
+    management: "Management"
+    ceo: "John Doe"
+    register_info: "Commercial Register"
+    register_court: "District Court of Sample City"
+    register_number: "HRB 12345"
+    vat_info: "VAT Identification Number"
+    vat_id: "DE 123456789"
+    liability: "Liability Disclaimer"
+    liability_text: "The contents of our pages were created with the utmost care. However, we cannot guarantee the accuracy, completeness, or currency of the content. As a service provider, we are responsible for our own content on these pages in accordance with general laws pursuant to § 7 paragraph 1 TMG. According to §§ 8 to 10 TMG, we are not obligated as a service provider to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity. Obligations to remove or block the use of information under general law remain unaffected. However, liability in this regard is only possible from the time of knowledge of a specific legal violation. Upon becoming aware of such legal violations, we will remove this content immediately."
+    copyright: "Copyright"
+    copyright_text: "The content and works created by the site operators on these pages are subject to German copyright law. Duplication, processing, distribution, or any form of commercialization of such content beyond the scope of copyright law shall require the prior written consent of its respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use. Insofar as the content on this site was not created by the operator, the copyrights of third parties are respected. In particular, third-party content is identified as such. Should you nevertheless become aware of a copyright infringement, we ask for a corresponding notice. Upon becoming aware of legal violations, we will remove such content immediately."
   show:
     title: "Referenced media in the project"
     intro: "Your media has been successfully detected. Select the sequences you want to start the intelligent analysis for."
