--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -34,6 +34,9 @@ es:
       send_paranoid_instructions: "Si tu correo electrónico existe en nuestra base de datos, recibirás un enlace para restablecer la contraseña en unos minutos."
       updated: "Tu contraseña ha sido cambiada exitosamente. Ahora has iniciado sesión."
       updated_not_active: "Tu contraseña ha sido cambiada exitosamente."
+      title: "Restablecer contraseña"
+      subtitle: "Introduce tu correo electrónico para recibir un enlace para restablecer tu contraseña."
+      submit: "Enviar enlace de restablecimiento"
     registrations:
       title: "Regístrate gratis"
       subtitle: "Crea una cuenta para usar Voidfiles con todas sus funciones."
