--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -34,6 +34,9 @@ fr:
       send_paranoid_instructions: "Si votre adresse e-mail existe dans notre base de données, vous recevrez un lien de récupération du mot de passe dans quelques minutes."
       updated: "Votre mot de passe a été changé avec succès. Vous êtes maintenant connecté."
       updated_not_active: "Votre mot de passe a été changé avec succès."
+      title: "Réinitialiser le mot de passe"
+      subtitle: "Entrez votre adresse e-mail pour recevoir un lien de réinitialisation de votre mot de passe."
+      submit: "Envoyer le lien de réinitialisation"
     registrations:
       title: "Inscription gratuite"
       subtitle: "Créez un compte pour profiter pleinement de Voidfiles."
